--- a/common/gnome-shell/3.14/sass/_common.scss
+++ b/common/gnome-shell/3.14/sass/_common.scss
@@ -710,6 +710,7 @@ StScrollBar {
   .item-box {
     padding: 8px;
     border-radius: 2px;
+    border: 1px solid transparent;
 
     &:outlined {
       padding: 8px;
