--- a/common/gnome-shell/3.16/sass/_common.scss
+++ b/common/gnome-shell/3.16/sass/_common.scss
@@ -665,6 +665,7 @@ StScrollBar {
   .item-box {
     padding: 8px;
     border-radius: 2px;
+    border: 1px solid transparent;
 
     &:outlined {
       padding: 8px;
